--- a/financing_portal/templates/FinancingPortalProductsAccessSoftware.html
+++ b/financing_portal/templates/FinancingPortalProductsAccessSoftware.html
@@ -5,12 +5,7 @@
 {% block content %}
 
 
-    <script>
 
-        function setFrameUrl(url) {
-            document.getElementById('softwareEmbed').src = url
-        }
-    </script>
 
     <style>
         iframe {
@@ -34,7 +29,7 @@
                     <div class="card-header card-default">
                         Products Purchased
                     </div>
-                    <div class="card-body">
+                    <div id="app" class="card-body">
                         <div class="table-responsive">
                             <table id="datatable" class="table table-striped dt-responsive nowrap">
                                 <thead>
@@ -60,14 +55,16 @@
                                         <td>{% if prod.password %}{{ prod.password }}{% endif %}</td>
                                         <td>
                                             {% if prod.product.link %}
-                                            <button onclick="setFrameUrl('{{ prod.product.link }}')" class="btn btn-primary">
-                                                Open
-                                            </button>
+                                                <button v-on:click="addTab('{{ prod.product.name }}','{{ prod.product.link }}')"
+                                                        class="btn btn-primary">
+                                                    Open
+                                                </button>
                                             {% endif %}
                                         </td>
                                         <td>
                                             {% if prod.product.link %}
-                                                <a class="btn btn-primary" href="{{ prod.product.link }}" target="_blank">Go To Site</a>
+                                                <a class="btn btn-primary" href="{{ prod.product.link }}"
+                                                   target="_blank">Go To Site</a>
                                             {% endif %}
                                         </td>
                                     </tr>
@@ -75,7 +72,17 @@
                                 </tbody>
                             </table>
                         </div>
-                        <iframe id="softwareEmbed" width="100%" height="800"></iframe>
+
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <li class="nav-item d-flex" v-for="(page, index) in pages" :key="page.name">
+                                <a class="nav-link" :id="page.id + '-tab'" data-toggle="tab" :href="'#'+ page.id" role="tab">${page.title}</a>
+                            <p  v-on:click="close(index)" style="cursor: pointer">X </p>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="myTabContent">
+                            <iframe class="tab-pane fade" v-for="page in pages" :key="page.name"  width="100%" height="800" :id="page.id" :src="page.url" role="tabpanel"></iframe>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -83,3 +90,33 @@
     </section>
 {% endblock %}
 
+{% block javascriptblock %}
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <script>
+        const app = new Vue({
+            el: '#app',
+            delimiters: ['${', '}'],
+
+            data: {
+                pages: [],
+            },
+            mounted: function () {
+
+            },
+            methods: {
+
+                addTab: function (name, url) {
+                    this.pages.push({
+                        title: name,
+                        url: url,
+                        id: name.replace(/ /g, '')
+                    })
+                },
+                close: function (index) {
+                    this.pages.splice(index, 1)
+                }
+
+            },
+        });
+    </script>
+{% endblock %}
