--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -44,7 +44,7 @@
                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.3s; animation-name: fadeInUp;">
                             {{ dynamic.frontpage_text }}</p>
                         <a class="btn btn-theme wow fadeInUp" data-wow-duration="3s" data-wow-delay="0.5s"
-                           href="https://www.youtube.com/watch?v=xNCfnbGT5hY&t=726s" target="_blank"
+                           href="{{ dynamic.webinar }}" target="_blank"
                            data-text="Watch Our Webinar"
                            style="visibility: visible; animation-duration: 3s; animation-delay: 0.5s; animation-name: fadeInUp; margin-top: 5px;">
                             <span>W</span><span>a</span><span>t</span><span>c</span><span>h</span>
