--- a/user/templates/userBase.html
+++ b/user/templates/userBase.html
@@ -11,7 +11,8 @@
     <style media="screen">
 
         .image {
-            width: 100%;
+            max-height: 200px;
+            max-width: 500px;
         }
 
         .bgcolor {
