--- a/business/templates/businessCreditBuilding/faxNumber.html
+++ b/business/templates/businessCreditBuilding/faxNumber.html
@@ -48,52 +48,61 @@
                         <li>Receive 250 pages/mo</li>
 
                         <br>
-                                                <div class="row justify-content-center">
-                                                    <a href="{% url "business:business-credit-steps-onlyprograms" %}" class="btn btn-primary">Order
-                                now</a>
-                                                </div>
-{#                        <div class="row">#}
-{#                            <div class="col-md my-2 text-center">#}
-{#                                Monthly option - $20 USD:<br>#}
-{#                                <form method="post">#}
-{#                                    {% csrf_token %}#}
-{#                                    Fax Numbers To Choose From<br>#}
-{#                                    <select class="custom-select mb-2" name="prefix">#}
-{#                                        <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
-{#                                        <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
-{#                                        <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
-{#                                        <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
-{#                                        <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
-{#                                        <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
-{#                                        <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
-{#                                    </select><br>#}
-{#                                    Quantity: <input class="quantity_input" value="1" type="number" name="quantity"><br><br>#}
-{##}
-{#                                    <input type="hidden" class="btn btn-primary" value="monthly" name="variant">#}
-{#                                    <button type="submit" class="btn btn-primary">Order now</button>#}
-{#                                </form>#}
-{#                            </div>#}
-{#                            <div class="col-md my-2 text-center">#}
-{#                                Save 50% with annual option - $240 USD:<br>#}
-{#                                <form method="post">#}
-{#                                    {% csrf_token %}#}
-{#                                    Fax Numbers To Choose From<br>#}
-{#                                    <select class="custom-select mb-2">#}
-{#                                        <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
-{#                                        <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
-{#                                        <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
-{#                                        <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
-{#                                        <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
-{#                                        <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
-{#                                        <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
-{#                                    </select><br>#}
-{#                                    Quantity: <input class="quantity_input" value="1" type="number" name="quantity"><br><br>#}
-{##}
-{#                                    <input type="hidden" class="btn btn-primary" value="yearly" name="variant">#}
-{#                                    <button type="submit" class="btn btn-primary">Order now</button>#}
-{#                                </form>#}
-{#                            </div>#}
-{#                        </div>#}
+                        <div class="row justify-content-center">
+                            {% if domain.is_main_site %}
+                                <a href="{% url "business:business-credit-steps-onlyprograms" %}"
+                                   class="btn btn-primary">Order
+                                    now</a>
+                            {% else %}
+                                <a href="http://shrsl.com/1nu6d-zg2-9t51"
+                                   class="btn btn-primary">Order
+                                    now</a>
+                            {% endif %}
+
+
+                        </div>
+                        {#                        <div class="row">#}
+                        {#                            <div class="col-md my-2 text-center">#}
+                        {#                                Monthly option - $20 USD:<br>#}
+                        {#                                <form method="post">#}
+                        {#                                    {% csrf_token %}#}
+                        {#                                    Fax Numbers To Choose From<br>#}
+                        {#                                    <select class="custom-select mb-2" name="prefix">#}
+                        {#                                        <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
+                        {#                                    </select><br>#}
+                        {#                                    Quantity: <input class="quantity_input" value="1" type="number" name="quantity"><br><br>#}
+                        {##}
+                        {#                                    <input type="hidden" class="btn btn-primary" value="monthly" name="variant">#}
+                        {#                                    <button type="submit" class="btn btn-primary">Order now</button>#}
+                        {#                                </form>#}
+                        {#                            </div>#}
+                        {#                            <div class="col-md my-2 text-center">#}
+                        {#                                Save 50% with annual option - $240 USD:<br>#}
+                        {#                                <form method="post">#}
+                        {#                                    {% csrf_token %}#}
+                        {#                                    Fax Numbers To Choose From<br>#}
+                        {#                                    <select class="custom-select mb-2">#}
+                        {#                                        <option value="888 (Toll Free Prefix)">888 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="877 (Toll Free Prefix)">877 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="866 (Toll Free Prefix)">866 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="855 (Toll Free Prefix)">855 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="844 (Toll Free Prefix)">844 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="833 (Toll Free Prefix)">833 (Toll Free Prefix)</option>#}
+                        {#                                        <option value="800 (Toll Free Prefix)">800 (Toll Free Prefix)</option>#}
+                        {#                                    </select><br>#}
+                        {#                                    Quantity: <input class="quantity_input" value="1" type="number" name="quantity"><br><br>#}
+                        {##}
+                        {#                                    <input type="hidden" class="btn btn-primary" value="yearly" name="variant">#}
+                        {#                                    <button type="submit" class="btn btn-primary">Order now</button>#}
+                        {#                                </form>#}
+                        {#                            </div>#}
+                        {#                        </div>#}
                     </div>
                 </div>
             </div>
