--- a/business/templates/businessCreditBuilding/tollFreeNumber.html
+++ b/business/templates/businessCreditBuilding/tollFreeNumber.html
@@ -102,15 +102,17 @@
                         {#                            </div>#}
                         {#                        </div>#}
                         {#                    </div>#}
-
-                        <div class="row justify-content-center">
+                        {% if domain.is_main_site %}
                             <a href="{% url "business:business-credit-steps-onlyprograms" %}" class="btn btn-primary">Order
                                 now</a>
-                        </div>
-
+                        {% else %}
+                            <a href="http://shrsl.com/1nu6d-zg2-9t51"
+                               class="btn btn-primary">Order
+                                now</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <style>
