--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -34,20 +34,25 @@
                                         class="toggle-none">Virtual Card Access</span></a>
                             </li>
                         {% endif %}
-
-                        <li class="nav-item">
-                            <a href="/{{ request.resolver_match.app_name }}/business-credit-steps-guided"
-                               class="nav-link"> Guided Business Creation</a>
-                        </li>
-
-
-                        <li class="nav-item">
-                            <a href="{% url 'business:create_specific_portal' %}" class="nav-link"> Create My Specific
-                                Portal </a>
-                        </li>
-                        <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/goals" class="nav-link">My
-                            Goals With The
-                            Platform</a></li>
+                        {% if dynamic.is_main_site %}
+                            <li class="nav-item">
+                                <a href="/{{ request.resolver_match.app_name }}/business-credit-steps-guided"
+                                   class="nav-link"> Guided Business Creation</a>
+                            </li>
+                        {% endif %}
+                        {% if dynamic.is_main_site %}
+                            <li class="nav-item">
+                                <a href="{% url 'business:create_specific_portal' %}" class="nav-link"> Create My
+                                    Specific
+                                    Portal </a>
+                            </li>
+                        {% endif %}
+                        {% if dynamic.is_main_site %}
+                            <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/goals"
+                                                    class="nav-link">My
+                                Goals With The
+                                Platform</a></li>
+                        {% endif %}
                         {#                <li class="nav-item">#}
                         {#                    <a href="/{{ request.resolver_match.app_name }}/upgrade" class="nav-link">Upgrade to Full Business Builder Program#}
                         {#                        with No Money Down</a>#}
@@ -60,14 +65,14 @@
                             <a href="{% url 'business:business_credibility_checklist' %}"
                                class="nav-link"> Business Credibility Checklist </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="{% url 'business:tradelines' %}"
-                               class="nav-link"> Add Business Tradelines </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'business:signupforconcierge' %}"
-                               class="nav-link"> Sign Up For Concierge Program </a>
-                        </li>
+{#                        <li class="nav-item">#}
+{#                            <a href="{% url 'business:tradelines' %}"#}
+{#                               class="nav-link"> Add Business Tradelines </a>#}
+{#                        </li>#}
+{#                        <li class="nav-item">#}
+{#                            <a href="{% url 'business:signupforconcierge' %}"#}
+{#                               class="nav-link"> Sign Up For Concierge Program </a>#}
+{#                        </li>#}
 
                         {% if request.user.external_resources.all %}
                             <li class="nav-item">
@@ -80,11 +85,13 @@
                             <a href="{{ dynamic.webinar }}" target="_blank"
                                class="nav-link"> Watch Webinar On Building Business Credit </a>
                         </li>
-
+                        {% if dynamic.is_main_site %}
                         <li class="nav-item">
                             <a href="{% url 'financing_portal:purchase-products' %}"
-                               class="nav-link"> Purchase Our Other Software Products *(Not Linked To Business Credit)* </a>
+                               class="nav-link"> Purchase Our Other Software Products *(Not Linked To Business
+                                Credit)* </a>
                         </li>
+                    {% endif %}
                         <li class="nav-item">
                             <a href="{% url 'financing_portal:financing-portal-home' %}"
                                class="nav-link"> Financing Our Products & Softwares Portal </a>
@@ -100,16 +107,18 @@
                                 Building Plan </a>
                         </li>
                         {% if dynamic.show_credit_repair_plan %}
-                        <li class="nav-item">
-                            <a href="/{{ request.resolver_match.app_name }}/credit-situation" class="nav-link"> Create
-                                My Credit Repair Plan </a>
-                        </li>
+                            <li class="nav-item">
+                                <a href="/{{ request.resolver_match.app_name }}/credit-situation" class="nav-link">
+                                    Create
+                                    My Credit Repair Plan </a>
+                            </li>
                         {% endif %}
 
                         {% if dynamic.show_life_insurance %}
-                        <li class="nav-item">
-                            <a href="{{ dynamic.life_insurance_link }}" class="nav-link" target="_blank"> Life Insurance</a>
-                        </li>
+                            <li class="nav-item">
+                                <a href="{{ dynamic.life_insurance_link }}" class="nav-link" target="_blank"> Life
+                                    Insurance</a>
+                            </li>
                         {% endif %}
 
                         <li class="nav-item">
@@ -168,11 +177,13 @@
                                     To Get Your Business Back In Good Standing</a></li>
                             </ul>
                         </li>
+                    {% if dynamic.is_main_site %}
                         <li class="nav-item">
                             <a href="/{{ request.resolver_match.app_name }}/business-credit-steps-onlyprograms"
                                class="nav-link"> Choose Business Credit
                                 Building Steps You Need Done For You </a>
                         </li>
+                    {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
                                     class="toggle-none"> Business Credit Bureaus To Become Established With  <span
@@ -292,10 +303,12 @@
                                 Offering Financing To Your
                                 Customers </a>
                         </li>
+                    {% if dynamic.is_main_site %}
                         <li class="nav-item">
                             <a href="/{{ request.resolver_match.app_name }}/apply-loans" class="nav-link"> Apply For
                                 Business Loans </a>
                         </li>
+                    {% endif %}
                         <li class="nav-item">
                             <a href="{% url 'covid19:homeone' %}" class="nav-link"> Covid-19 Business Loan Section</a>
                         </li>
@@ -322,11 +335,14 @@
                                 0% Business Credit Card
                                 Strategy </a>
                         </li>
-                    {% if dynamic.is_paid_for_whitelabel %}
-                        <li class="nav-item">
-                            <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra Money
-                                Referring Friends! </a>
-                        </li>
+                    {% if dynamic.is_main_site %}
+                        {% if dynamic.is_paid_for_whitelabel %}
+                            <li class="nav-item">
+                                <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra
+                                    Money
+                                    Referring Friends! </a>
+                            </li>
+                        {% endif %}
                     {% endif %}
                         {% if dynamic.show_affiliate %}
                             <li class="nav-item">
@@ -353,10 +369,12 @@
                             <a href="/{{ request.resolver_match.app_name }}/insurance-products" class="nav-link">
                                 Insurance Products </a>
                         </li>
+                    {% if dynamic.is_main_site %}
                         <li class="nav-item">
                             <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"> Go To Chrome
                                 Extension Portal </a>
                         </li>
+                    {% endif %}
                         <!--  <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/lifegoals" class="nav-link">Life Money Hacks</a></li> -->
 
                         <li class="nav-item">
@@ -371,29 +389,34 @@
                                     App </a>
                             {% endif %}
                         </li>
+                    {% if dynamic.is_main_site %}
                         <li class="nav-item">
                             {% if dynamic.chromeExt %}
                                 <a href={{ dynamic.chromeExt }} target="_blank" class="nav-link"> Download Our Google
                                     Chrome Extension </a>
                             {% endif %}
                         </li>
-
+                    {% endif %}
+                    {% if dynamic.is_main_site %}
                         <li class="nav-item">
                             <a href="{% url 'business:faqs' %}" class="nav-link"> Frequently Asked Questions</a>
                         </li>
+                    {% endif %}
 
-                      <!--  <li class="nav-item">
-                            <a href="https://tawk.to/chat/5f678306f0e7167d00120839/default" target="_blank" class="nav-link"><span
-                                    class="toggle-none">Live Chat</span></a>
-                        </li>      -->                  <li class="nav-item">
-                            <a href="https://www.getdinerotoday.com/customersuccessagent/" target="_blank" class="nav-link"><span
+                        <!--  <li class="nav-item">
+                              <a href="https://tawk.to/chat/5f678306f0e7167d00120839/default" target="_blank" class="nav-link"><span
+                                      class="toggle-none">Live Chat</span></a>
+                          </li>      -->
+                        <li class="nav-item">
+                            <a href="https://www.getdinerotoday.com/customersuccessagent/" target="_blank"
+                               class="nav-link"><span
                                     class="toggle-none">Your AI Customer Success Agent</span></a>
                         </li>
-                                             <li class="nav-item">
-                          <a href="https://getdinerotodaystore.com/" target="_blank" class="nav-link"><span
-                                  class="toggle-none">Shop At Our Online Store <br> *(Get Business Cards, Clothes & Much More!)*</span></a>
-                      </li>
-                      <!--
+                        <li class="nav-item">
+                            <a href="https://getdinerotodaystore.com/" target="_blank" class="nav-link"><span
+                                    class="toggle-none">Shop At Our Online Store <br> *(Get Business Cards, Clothes & Much More!)*</span></a>
+                        </li>
+                        <!--
                       <li class="nav-item">
                           <a href="{% url 'onboarding:onboardinghome' %}" class="nav-link"> Client Onboarding</a>
                       </li> -->
