--- a/getdinerotoday/static/css/base.css
+++ b/getdinerotoday/static/css/base.css
@@ -28,12 +28,12 @@
     General
 ------------------------*/
 a:focus { text-decoration: none !important; }
-a:focus, a:hover { color: #115d22; text-decoration: none !important; }
-a, button, input { outline: medium none !important; color: #115d22; }
+a:focus, a:hover { color: #3D7BBF; text-decoration: none !important; }
+a, button, input { outline: medium none !important; color: #3D7BBF; }
 
-*::-moz-selection { background: #115d22; color: #fff; text-shadow: none; }
-::-moz-selection { background: #115d22; color: #fff; text-shadow: none; }
-::selection { background: #115d22; color: #fff; text-shadow: none; }
+*::-moz-selection { background: #3D7BBF; color: #fff; text-shadow: none; }
+::-moz-selection { background: #3D7BBF; color: #fff; text-shadow: none; }
+::selection { background: #3D7BBF; color: #fff; text-shadow: none; }
 
 
 /* ------------------------
@@ -135,7 +135,7 @@ a, i, .btn, .btn span, button, img, span, .dropdown-item, .social-icons li:hover
 .loader .loader-box {position: absolute; width: 10rem; height: 10rem; overflow: hidden;}
 .loader .loader-box::before {content: ''; position: absolute; width: 100%; height: 100%; border-radius: 50%; opacity: 0.1;}
 .loader .loader-box:nth-child(1) {top: 0; left: 0;}
-.loader .loader-box:nth-child(1)::before {top: 50%; left: 50%; background: #115d22; animation: lightMe1 4s ease-out infinite normal;}
+.loader .loader-box:nth-child(1)::before {top: 50%; left: 50%; background: #3D7BBF; animation: lightMe1 4s ease-out infinite normal;}
 .loader .loader-box:nth-child(2) {top: 0; right: 0;}
 .loader .loader-box:nth-child(2)::before {top: 50%; right: 50%; background: #05f8a1; animation: lightMe2 4s ease-out infinite normal;}
 .loader .loader-box:nth-child(3) {bottom: 0; right: 0;}
@@ -162,7 +162,7 @@ a, i, .btn, .btn span, button, img, span, .dropdown-item, .social-icons li:hover
 [data-overlay] {position:relative; z-index:0;}
 [data-overlay]:before, .slide-overlay:before {position: absolute;  content: '';  background-color: #000000;  width: 100%;  height: 100%;  top: 0;  left: 0; z-index:-1;}
 [data-overlay].white-overlay:before{background-color:#fff;}
-[data-overlay].theme-overlay:before{background-color: #115d22;}
+[data-overlay].theme-overlay:before{background-color: #3D7BBF;}
 [data-overlay].grediant-overlay:before{background: rgb(0,91,234); background: linear-gradient(90deg, rgba(0,91,234,1) 0%, rgba(37,117,252,1) 80%);}
 [data-overlay="1"]:before{opacity:0.1;}
 [data-overlay="2"]:before{opacity:0.2;}
@@ -227,39 +227,39 @@ a, i, .btn, .btn span, button, img, span, .dropdown-item, .social-icons li:hover
 .navbar-nav ul{position: absolute; padding: 10px; background: #ffffff; border-radius: 7px; border:none; -webkit-transition: all 400ms ease-out; -o-transition: all 400ms ease-out; transition: all 400ms ease-out;}
 .navbar-brand{margin-right: 0;}
 .navbar-nav ul a{padding: 10px 20px; white-space: nowrap; position: relative; background: none; color: #1c1d3e; font-size: 14px; font-weight: 400;}
-.navbar-nav ul a:hover{color: #115d22; padding-left: 30px;}
-.navbar-nav .nav-link.highlighted{color: #115d22;}
+.navbar-nav ul a:hover{color: #3D7BBF; padding-left: 30px;}
+.navbar-nav .nav-link.highlighted{color: #3D7BBF;}
 .navbar-nav a .sub-arrow {position: relative; margin-left: 5px;}
 .navbar-nav a .sub-arrow::before {content: '+'; position: absolute; left: 0; right: 0; top: 0; bottom: 0;}
 .navbar-nav a.highlighted .sub-arrow::before {content: '-';}
 .navbar-nav ul a::before {position: absolute; top: 0; left: 0; color: transparent; content: '.'; text-shadow: 0 0 transparent; font-size: 2em; line-height: 1em; -webkit-transition: text-shadow 0.3s, color 0.3s; -moz-transition: text-shadow 0.3s, color 0.3s; transition: text-shadow 0.3s, color 0.3s; pointer-events: none; animation: opacitychange 1s ease-in-out infinite;}
 .navbar-nav ul a:hover::before,
-.navbar-nav ul a:focus::before {color: #115d22; text-shadow: 10px 0 #1c1d3e, -10px 0 #1c1d3e;}
+.navbar-nav ul a:focus::before {color: #3D7BBF; text-shadow: 10px 0 #1c1d3e, -10px 0 #1c1d3e;}
 
 .navbar-brand{margin-right: 0;}
 .navbar-nav .nav-item{margin: 0 20px}
 .navbar-nav .nav-link{color: #1c1d3e; font-weight: 500; padding: 0 !important; border-radius: 0; text-transform: capitalize; position: relative;}
-.navbar-nav .nav-link:hover, .navbar-nav .nav-item .nav-link.active {color: #115d22;}
+.navbar-nav .nav-link:hover, .navbar-nav .nav-item .nav-link.active {color: #3D7BBF;}
 .navbar-nav .nav-link::before {position: absolute; bottom: -10%; left: 50%; color: transparent; content: '.'; text-shadow: 0 0 transparent; font-size: 2em; -webkit-transition: text-shadow 0.3s, color 0.3s; -moz-transition: text-shadow 0.3s, color 0.3s; transition: text-shadow 0.3s, color 0.3s; -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); transform: translateX(-50%); pointer-events: none; animation: opacitychange 1s ease-in-out infinite; line-height: 0;}
 .navbar-nav .nav-link:hover::before,
 .navbar-nav .nav-item .nav-link.active::before,
-.navbar-nav .nav-link:focus::before {color: #115d22; text-shadow: 10px 0 #1c1d3e, -10px 0 #1c1d3e;}
+.navbar-nav .nav-link:focus::before {color: #3D7BBF; text-shadow: 10px 0 #1c1d3e, -10px 0 #1c1d3e;}
 
 .header-3 .navbar-nav .nav-link {
-  color: #115d22;
+  color: #3D7BBF;
 }
 .header-3 .navbar-nav .nav-link:hover, .header-3 .navbar-nav .nav-item .nav-link.active {
-  color: #115d22;
+  color: #3D7BBF;
 }
 
 .header-3 .navbar-nav .nav-link:hover::before,
 .header-3 .navbar-nav .nav-item .nav-link.active::before,
 .header-3 .navbar-nav .nav-link:focus::before {color: #ffffff;}
 
-.header-3 #header-wrap.fixed-header .navbar-nav .nav-link{color: #1c1d3e}
-.header-3 #header-wrap.fixed-header .navbar-nav .nav-link:hover, .header-3 #header-wrap.fixed-header .navbar-nav .nav-item .nav-link.active{color: #115d22}
+.header-3 #header-wrap.fixed-header .navbar-nav .nav-link{color: #3D7BBF}
+.header-3 #header-wrap.fixed-header .navbar-nav .nav-link:hover, .header-3 #header-wrap.fixed-header .navbar-nav .nav-item .nav-link.active{color: #3D7BBF}
 .header-3 #header-wrap.fixed-header .navbar-nav .nav-link:hover::before,
-.header-3 #header-wrap.fixed-header .navbar-nav .nav-link.active::before{color: #115d22;}
+.header-3 #header-wrap.fixed-header .navbar-nav .nav-link.active::before{color: #3D7BBF;}
 
 .logo .sticky-logo{display: none !important;}
 .header-2 #header-wrap.fixed-header .logo > img, .header-3 #header-wrap.fixed-header .logo > img{display: none !important;}
@@ -286,7 +286,7 @@ a, i, .btn, .btn span, button, img, span, .dropdown-item, .social-icons li:hover
 .media-icon.list-inline li{display: inline-block;}
 .media-icon li{margin-bottom: 15px; font-size: 16px; font-weight: 400;}
 .media-icon li:last-child{margin-bottom: 0;}
-.media-icon li a{color: #115d22}
+.media-icon li a{color: #3D7BBF}
 .media-icon li a:hover{text-decoration: underline !important;}
 
 .footer-list li{margin-bottom: 15px; text-transform: capitalize;}
@@ -297,7 +297,7 @@ a, i, .btn, .btn span, button, img, span, .dropdown-item, .social-icons li:hover
 .footer-logo{margin-bottom: 15px;}
 .footer-social ul li{display: inline-block;}
 .footer-social ul li a{color: #1c1d3e}
-.footer-social ul li a:hover{color: #115d22}
+.footer-social ul li a:hover{color: #3D7BBF}
 
 .theme-bg .primary-footer, .theme-bg .primary-footer a,
 .theme-bg .secondary-footer,
@@ -326,7 +326,7 @@ a, i, .btn, .btn span, button, img, span, .dropdown-item, .social-icons li:hover
 .breadcrumb {padding: 0; background:none; display: inline-block; border-radius: 0; margin: 0; text-transform: capitalize; color: #1c1d3e; font-weight: 700;}
 .breadcrumb-item{display: inline-block;}
 .breadcrumb-item a{color: #1c1d3e}
-.breadcrumb-item.active, .breadcrumb-item a:hover{color: #115d22;}
+.breadcrumb-item.active, .breadcrumb-item a:hover{color: #3D7BBF;}
 .page-title-pattern {bottom: 0; position: absolute;}
 
 
