--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -122,10 +122,10 @@
                         Paypal Information To Receive Payments</a></li>
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:merchant' %}" class="nav-link">Sign Up
                         For Merchant Account</a></li>
-                    <li class="nav-item"><a href="https://apps.apple.com/us/app/white-label-partner-gdt/id1530824382"
-                                            target="_blank" class="nav-link">Download Partner App For Iphone</a></li>
+                  <!--  <li class="nav-item"><a href="https://apps.apple.com/us/app/white-label-partner-gdt/id1530824382"
+                                            target="_blank" class="nav-link">Download Partner App For Iphone</a></li> -->
                     <li class="nav-item"><a
-                            href="https://play.google.com/store/apps/details?id=com.millenialbusinessbuilders.whitelabelapp"
+                            href="https://play.google.com/store/apps/details?id=com.millenialbusiness.whitelabel"
                             target="_blank" class="nav-link">Download Partner App For Android</a></li>
                     <br><br>
                     <!--  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:merchant' %}" class="nav-link">Download Partner App For Android</a></li> -->
