--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -127,6 +127,9 @@
                     <li class="nav-item"><a
                             href="https://play.google.com/store/apps/details?id=com.millenialbusiness.whitelabel"
                             target="_blank" class="nav-link">Download Partner App For Android</a></li>
+                  <li class="nav-item"><a
+                            href="https://apps.apple.com/us/app/kleui-whitelabel/id1561479899"
+                            target="_blank" class="nav-link">Download Partner App For IOS</a></li>
                     <br><br>
                     <!--  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:merchant' %}" class="nav-link">Download Partner App For Android</a></li> -->
                 </ul>
