--- a/business/templates/businessCreditBuilding/websiteCreation.html
+++ b/business/templates/businessCreditBuilding/websiteCreation.html
@@ -60,9 +60,9 @@
                         <br>
                         <div class="text-center">
                             Websites We Have Built:<br>
-                            <a href="http://rochellehardymd.com/">http://rochellehardymd.com/</a><br>
-                            <a href="https://www.livingwatersministry.org/">https://www.livingwatersministry.org/</a><br>
-                            <a href="https://tappandentistry.com/">https://tappandentistry.com/</a><br><br>
+                            <a href="http://friendlyfacespremium.com/" target="_blank">Freindly Faces Premium/</a><br>
+                            <a href="http://ffkidssalon.com/" target="_blank" >Friendly Faces Kids Salon</a><br>
+                            <a href="http://www.cuttinup.net/" target="_blank">A Cut Above</a><br><br>
 
 
                             {% if domain.is_main_site %}
