--- a/business/templates/businessCreditBuilding/websiteCreation.html
+++ b/business/templates/businessCreditBuilding/websiteCreation.html
@@ -60,11 +60,11 @@
                         <br>
                         <div class="text-center">
                             Websites We Have Built:<br>
-                            <a href="http://friendlyfacespremium.com/" target="_blank" class="btn btn-primary">Freindly Faces Premium</a><br>
-                            <a href="http://ffkidssalon.com/" target="_blank" class="btn btn-primary" >Friendly Faces Kids Salon</a><br>
-                            <a href="http://www.cuttinup.net/" target="_blank" class="btn btn-primary">A Cut Above</a><br><br>
+                          <br>  <a href="http://friendlyfacespremium.com/" target="_blank" class="btn btn-primary">Freindly Faces Premium</a><br>
+                          <br>  <a href="http://ffkidssalon.com/" target="_blank" class="btn btn-primary" >Friendly Faces Kids Salon</a><br>
+<br><a href="http://www.cuttinup.net/" target="_blank" class="btn btn-primary">A Cut Above</a><br><br>
 
-
+<br>
                             {% if domain.is_main_site %}
                                 <a href="{% url "business:business-credit-steps-onlyprograms" %}"
                                    class="btn btn-primary">Order
