--- a/freewhitelabelprogramonboarding/templates/onboarding.html
+++ b/freewhitelabelprogramonboarding/templates/onboarding.html
@@ -1,4 +1,4 @@
-{% extends "pages/base-onlinetools.html" %}
+{% extends "pages/base-freewhitelabelprogramonboarding.html" %}
 {% load static %}
 
 {% block extrastyle %}
