--- a/getdinerotoday/templates/pages/base-freewhitelabelprogramonboarding.html
+++ b/getdinerotoday/templates/pages/base-freewhitelabelprogramonboarding.html
@@ -16,6 +16,7 @@
                   <li class="nav-item">
                     <!-- <ul class="nav-second-level nav flex-column " aria-expanded="false"> -->
                        <li class="nav-item"><a href="{% url 'freewhitelabelprogramonboarding:onboarding' %}" class="nav-link">Client Onboarding Dashboard</a></li>
+                       <li class="nav-item"><a href="{% url 'freewhitelabelprogramonboarding:whitelabelaccess' %}" class="nav-link">Purchase Wholesale White Label Access For Client </a></li>
                           <!-- </ul> -->
                </ul>
             </div>
