--- a/freewhitelabelprogramonboarding/templates/whitelabelaccess.html
+++ b/freewhitelabelprogramonboarding/templates/whitelabelaccess.html
@@ -27,17 +27,18 @@
                         <tr>
                             <th>Name</th>
                             <th>Price</th>
+                            <th>Description</th>
                             <th>Order</th>
                         </tr>
                         </thead>
 
                         <tbody>
-                        White Label Purchase
                             <tr>
                                 <td>Wholesale White Label Lifetime Access</td>
                                 <td>$75</td>
+                                <td>Purchase This So We Can Give Your Customer Access To Your Softare Portal</td>
                                 <td>
-                                        <button class="btn btn-primary">Add To Cart</button>
+                                      <a href="#"> <button class="btn btn-primary">Add To Cart</button></a> 
                                 </td>
                             </tr>
                         </tbody>
