--- a/freewhitelabelprogramonboarding/templates/onboarding.html
+++ b/freewhitelabelprogramonboarding/templates/onboarding.html
@@ -15,7 +15,7 @@
   <div class="jumbonew">
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
-  <h2>See How You Can Pay Vendors With Credit Cards & Debit Cards Using Melio Payments</h2>
+  <h2>See How To Use The Free White Label Partner Portal</h2>
   </div>
   </div>
   </div>
@@ -28,28 +28,6 @@
   text-align:center;
   }
   </style>
-    <div class="row">
-        <div class="col-md-4 col-sm-6">
-            <div class="card mb-4 shadow-sm">
-                <img src="https://assets.website-files.com/5beaa7233823c51be17fe2d3/5bf1307f3a50d1db88cbc71b_papers%20vs%20desktop%20(1).png"
-                     height="270px" width="100%" alt="">
-                <div class="card-body">
-                    <h4 class="card-text"><b>Melio Payments</b></h4>
-                    <h5 class="card-text">Pay any invoice with a bank transfer for FREE, or use your credit card to defer payment and earn rewards (2.9% fee). Vendors receive a check or a bank deposit</h5>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <a href="https://melio.grsm.io/zephaniahlangley7730" target="_blank" class="btn btn-primary">
-                                Sign Up For The Service
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ANCHOR_FOR_NEW_CARDS -->
-        <!-- Dont remove this comment -->
-
-    </div>
 
 
 </section>
