--- a/freewhitelabelprogramonboarding/templates/whitelabelaccess.html
+++ b/freewhitelabelprogramonboarding/templates/whitelabelaccess.html
@@ -36,9 +36,9 @@
                             <tr>
                                 <td>Wholesale White Label Lifetime Access</td>
                                 <td>$75</td>
-                                <td>Purchase This So We Can Give Your Customer Access To Your Softare Portal</td>
+                                <td>Purchase This So We Can Give Your Customer Access To Your Software Portal</td>
                                 <td>
-                                      <a href="https://kleuibusinessbuilder.com/order-formrnyv785e0" target="_blank"> <button class="btn btn-primary">Add To Cart</button></a> 
+                                      <a href="https://kleuibusinessbuilder.com/order-form1624152690386" target="_blank"> <button class="btn btn-primary">Add To Cart</button></a>
                                 </td>
                             </tr>
                         </tbody>
