--- a/freewhitelabelprogramonboarding/templates/onboarding.html
+++ b/freewhitelabelprogramonboarding/templates/onboarding.html
@@ -10,7 +10,7 @@
 <section class="main-content">
   <div class="row">
     <div class="col-md-12">
-<iframe width="100%" height="515" src="https://www.youtube.com/embed/89jl2FqPZIg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+<iframe width="100%" height="515" src="https://www.youtube.com/embed/Z8rwVu-Z2IU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
   </div>
   <div class="jumbonew">
     <div class="jumbotron jumbotron-fluid">
